--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,35 @@
 *{
-	background-color:yellow;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+.header{
+	display: flex;
+	padding: 2em;
+	margin-bottom: 1em;
+	flex-direction: column;
+	align-items: center;
+	background-color:rgb(64, 64, 133);
+	color: white;
+}
+
+form{
+	display: flex;
+	padding: 2em;
+	margin-bottom: 1em;
+	flex-direction: column;
+	align-items: center;
+}
+input{
+	width: 50em;
+	height: 2em;
+}
+
+button{
+	padding: 6px;
+	background-color: orangered;
+}
+
+.form-field{
+	margin: 1em;
+}
+
